syntax = "proto3";

package github_overseer;

option go_package = "github.com/brotherlogic/github_overseer/proto";

message Config {
    map<string, string> repo_map = 1;
    repeated TrackedDocument tracked_documents = 2;
}

message TrackedDocument {
    string user = 1;
    string repo = 2;
    string path = 3;

    string latest_hash = 4;

    TaskList tasklist = 5;
}

message TaskList {
    repeated Task tasks = 1;
}

message Task {
    // The text of the task to complet
    string task = 1;

    // Tasks can be placed outside of the created repo
    // This stores the intended repo
    string bounced_repo = 2;

    enum TaskState {
        TASK_STATE_UNKNOWN = 0;
        TASK_STATE_IN_PROGRESS = 1;
        TASK_STATE_BLOCKED = 2;
        TASK_STATE_COMPLETE = 3;
    }
    TaskState state = 3;

    // Associated issue - negative number here indicates that
    // there is no associated issue
    int32 issue_id = 4;

    // The number of the task in the given list
    int32 index_number = 5;
}